[gd_scene load_steps=2 format=3 uid="uid://iicpwsiy8qu1"]

[ext_resource type="Script" path="res://town.gd" id="1_bxa6h"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bxa6h")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -145.0
offset_bottom = 23.0
grow_horizontal = 0
text = "Gold = 9999999999"

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Adventurers" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2

[node name="PartyPanel" type="HBoxContainer" parent="TabContainer/Adventurers"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="BuildingPanel" type="TabContainer" parent="TabContainer/Adventurers"]
layout_mode = 2

[node name="Tavern" type="Control" parent="TabContainer/Adventurers/BuildingPanel"]
layout_mode = 2

[node name="TavernPanel" type="HBoxContainer" parent="TabContainer/Adventurers/BuildingPanel/Tavern"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="Weaponsmith" type="Control" parent="TabContainer/Adventurers/BuildingPanel"]
visible = false
layout_mode = 2

[node name="WeaponPanel" type="HBoxContainer" parent="TabContainer/Adventurers/BuildingPanel/Weaponsmith"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="Armoursmith" type="Control" parent="TabContainer/Adventurers/BuildingPanel"]
visible = false
layout_mode = 2

[node name="ArmourPanel" type="HBoxContainer" parent="TabContainer/Adventurers/BuildingPanel/Armoursmith"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="Upgrades" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
